@@ -30,6 +30,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -46,16 +47,16 @@ public class InMemoryBlobStoreRepository implements BlobStoreRepository {
 
     @Override
     public BlobStoreFiles listBlobs(String prefix) {
-        return listBlobs(Arrays.asList(prefix));
+        return listBlobs(Collections.singletonList(prefix));
     }
 
     @Override
     public BlobStoreFiles listBlobs(Collection<String> prefixes) {
         logger.debug("list blobs called in in-memory blob store");
         List<BlobStoreFiles.File> files = blobs.keySet().stream()
-                .filter(k -> prefixes.stream().anyMatch(prefix -> k.startsWith(prefix)))
+                .filter(k -> prefixes.stream().anyMatch(k::startsWith))
                 .map(k -> new BlobStoreFiles.File(k, new Date(), new Date(), 1234L))    //TODO Add real details?
-                .collect(Collectors.toList());
+                .toList();
         BlobStoreFiles blobStoreFiles = new BlobStoreFiles();
         blobStoreFiles.add(files);
         return blobStoreFiles;
